--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.19.2",
     "lucide-react": "^0.263.1",
-    "next": "14.0.4",
+    "next": "^16.1.6",
     "prisma": "^6.19.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
